--- a/templates/create.html
+++ b/templates/create.html
@@ -4,7 +4,7 @@
 <form method="POST" action="{{ url_for('create_post') }}">
   <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
   <p>
-    Say something:
+    Message:
     <textarea type="text" id="fmessage" name="fmessage"></textarea>
   </p>
   <p>
