--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
 {% block container %}
-<h2>Welcome!</h2>
-<p>Welcome to the Flask app. This is the home page. Here are a few links to example pages you might find interesting.
-    <ul>
-        <li><a href="{{ url_for('read')}}">a page that displays information pulled from a MongoDB database collection</a></li>
-        <li><a href="{{ url_for('create')}}">a page with a form you can submit to create a new record in a MongoDB collection</a></li>
-    </ul>
+<h2>Help Us Make New York's Bike Lanes Safer.</h2>
+<p>The City of New York is committed to making our streets safer for bikers as we work towards a greener future. 
+    If you see a car ilegally parked in a bike lane, submit an anonymous tip today and you may be eligible for a $100 reward.
+
 </p>
 {% endblock %}
