--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block container %}
 <h2>Help Us Make New York's Bike Lanes Safer.</h2>
 <p>The City of New York is committed to making our streets safer for bikers as we work towards a greener future. 
-    If you see a car ilegally parked in a bike lane, submit an anonymous tip today and you may be eligible for a $100 reward.
+    If you see a car illegally parked in a bike lane, submit an anonymous tip today and you may be eligible for a $100 reward.
 
 </p>
 {% endblock %}
