--- a/templates/create.html
+++ b/templates/create.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %} {% block container %}
-<h2>Create</h2>
-<p>Create a new record in the MongoDB database collection.</p>
+<h2>Thank you for doing your part.</h2>
+<p>Please enter the following information to the best of your ability.</p>
 <form method="POST" action="{{ url_for('create_post') }}">
-  <p>Your name: <input type="text" id="fname" name="fname" /><br /></p>
+  <p>Location (Nearest Intersection) <input type="text" id="fname" name="fname" /><br /></p>
   <p>
-    Message:
-    <textarea type="text" id="fmessage" name="fmessage"></textarea>
+    Borough <textarea type="text" id="fmessage" name="fmessage"></textarea>
   </p>
   <p>
     <a href="{{ url_for('read')}}">Cancel</a>
