--- a/templates/create.html
+++ b/templates/create.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %} {% block container %}
-<h2>Thank you for doing your part.</h2>
-<p>Please enter the following information to the best of your ability.</p>
-<form method="POST" action="{{ url_for('create_post') }}">
-  <p>Location (Nearest Intersection) <input type="text" id="fname" name="fname" /><br /></p>
-  <p>
-    Borough <textarea type="text" id="fmessage" name="fmessage"></textarea>
-  </p>
-  <p>
-    <a href="{{ url_for('read')}}">Cancel</a>
-    <input type="submit" name="post-btn" value="Post" />
-  </p>
-</form>
+  <h2>Thank you for doing your part.</h2>
+  <p>Please enter the following information to the best of your ability.</p>
+  <form method="POST" action="{{ url_for('create_post') }}">
+    <p>Location (Nearest Intersection): <input type="text" id="flocation" name="flocation" /></p>
+    <p>Borough: <input type="text" id="fborough" name="fborough" /></p>
+    <p>Car License Plate Number: <input type="text" id="fplate" name="fplate" /></p>
+    <p>Car Model: <input type="text" id="fmodel" name="fmodel" /></p>
+    <p>Car Color: <input type="text" id="fcolor" name="fcolor" /></p>
+    <p>Additional Notes: <textarea id="fnotes" name="fnotes"></textarea></p>
+    <p>
+      <a href="{{ url_for('read')}}">Cancel</a>
+      <input type="submit" name="post-btn" value="Post" />
+    </p>
+  </form>
 {% endblock %}
