--- a/templates/read.html
+++ b/templates/read.html
@@ -8,13 +8,14 @@
     <div>
         <hr class="solid">
         <p class="post">
-            Posted by {{doc.name}} at {{ doc.created_at.strftime("%H:%M on %d %B %Y") }}
+            Report from {{doc.location}}, {{doc.borough}} at {{ doc.created_at.strftime("%H:%M on %d %B %Y") }}
             </br>
             <a href="{{ url_for('edit',mongoid=doc._id)}}">Edit</a> | <a href="{{ url_for('delete',mongoid=doc._id)}}">Delete</a>
             </br>
         </p>
         <p>
-            {{ doc.message }}
+            Car Description: {{doc.color}} {{doc.model}}
+            Additional Notes: {{doc.notes}}
         </p>
             
     </div>
