--- a/templates/create.html
+++ b/templates/create.html
@@ -1,20 +1,23 @@
-{% extends 'base.html' %} {% block container %}
-  <h2>Thank you for doing your part.</h2>
+{% extends 'base.html' %}
+
+{% block container %}
+  <h2>Submit a Report</h2>
   <p>Please enter the following information to the best of your ability.</p>
   <form method="POST" action="{{ url_for('create_post') }}">
-    <p>Location (Nearest Intersection): <input type="text" id="flocation" name="flocation" /></p>
+    <p>Location (nearest intersection): <input type="text" id="flocation" name="flocation" /></p>
     <p>Borough:
       <select id="fborough" name="fborough">
-        <option value="Manhattan">Manhattan</option>
         <option value="Brooklyn">Brooklyn</option>
-        <option value="Queens">Queens</option>
         <option value="Bronx">Bronx</option>
+        <option value="Manhattan">Manhattan</option>
+        <option value="Queens">Queens</option>
         <option value="Staten Island">Staten Island</option>
       </select>
     </p>
     <p>Car License Plate Number: <input type="text" id="fplate" name="fplate" /></p>
     <p>Car Model: <input type="text" id="fmodel" name="fmodel" /></p>
     <p>Car Color: <input type="text" id="fcolor" name="fcolor" /></p>
+    <p>Email Address (will not be made public): <input type="text" id="femail" name="femail" /></p>
     <p>Additional Notes: <textarea id="fnotes" name="fnotes"></textarea></p>
     <p>
       <a href="{{ url_for('read')}}">Cancel</a>
