--- a/templates/read.html
+++ b/templates/read.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
 {% block container %}
-<h2>Read</h2>
-<p>This page shows information pulled from a MongoDB database collection.
-        
+<h2>Active Reports</h2>
+<p>     
     {% for doc in docs %}
     <div>
         <hr class="solid">
@@ -14,7 +13,8 @@
             </br>
         </p>
         <p>
-            Car Description: {{doc.color}} {{doc.model}}
+            Car Description: {{doc.color}} {{doc.model}}, {{doc.plate}}
+            </br>
             Additional Notes: {{doc.notes}}
         </p>
             
