--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
       <main>{% block container %} {% endblock %}</main>
       <footer>
         <p>
-          The source code for this example app is
+          The source code for this app is
           <a href="https://github.com/dbdesign-assignments-spring2023/web-app-ohding11"
             >available on Github</a
           >.
