--- a/templates/edit.html
+++ b/templates/edit.html
@@ -31,7 +31,7 @@
     </p>
     <p>
       Email Address (will not be made public): 
-      <input type="text" id="femail" name="femail" /><br />
+      <input type="text" id="femail" name="femail" value="{{doc.email}}"/><br />
     </p>
     <p>
       Additional Notes:
