--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,25 +1,76 @@
-.container {
-  border: 2px solid;
-  width: 50%;
-  margin: 0 auto;
+body {
+  background-color: #FFFFFF;
+  font-family: Arial, sans-serif;
 }
 
-header,
-footer,
+/* Header */
+header {
+  background-color: #006699;
+  color: #FFFFFF;
+  padding: 10px;
+}
+
+/* Navigation */
+nav {
+  background-color: #006699;
+  color: #FFFFFF;
+  padding: 10px;
+}
+
+nav a {
+  color: #FFFFFF;
+}
+
+nav a:hover {
+  color: #C3DDE6;
+}
+
+/* Content */
 main {
-  padding: 20px;
+  background-color: #FFFFFF;
+  color: #000000;
+  padding: 10px;
 }
 
-header,
-main {
-  border-bottom: 2px solid;
-  margin-bottom: 5px;
+/* Form */
+form {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-p.post {
-  font-size: 12px;
+form label {
+  display: block;
+  margin-bottom: 10px;
+  color: #006699;
+  font-weight: bold;
 }
 
+form input[type="text"], form input[type="email"], form input[type="password"], form textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 2px solid #C3DDE6;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+form input[type="submit"], form button {
+  background-color: #006699;
+  color: #FFFFFF;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+form input[type="submit"]:hover, form button:hover {
+  background-color: #C3DDE6;
+}
+
+/* Footer */
 footer {
-  margin-bottom: 5px;
+  background-color: #C3DDE6;
+  color: #000000;
+  padding: 10px;
 }
