--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bike Lane Violations Reporting App</title>
+    <title>Bike Snitches</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <header>
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Bike Snitches Logo" class="logo">
         <h1>NYC Bikers Snitching Platform</h1>
         <p>
           <a href="{{ url_for('home')}}">Home</a> |
