--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <img src="{{ url_for('static', filename='/images/logo.png') }}" alt="Bike Snitches Logo" class="logo">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bike Snitches Logo" class="logo">
         <h1>NYC Bikers Snitching Platform</h1>
         <p>
           <a href="{{ url_for('home')}}">Home</a> |
