--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,3 @@
-.container {
-  border: 2px solid;
-  width: 50%;
-  margin: 0 auto;
-}
-
 header,
 footer,
 main {
@@ -28,6 +22,6 @@ p.post {
 
 footer {
   margin-bottom: 5px;
-  background-color:mediumseagreen;
+  background-color:lightgreen;
   color:white;
 }
