--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ h2 {
 
 p {
   text-align:center;
-  margin:20px;
+  margin:30px;
 }
 
 p.post {
@@ -31,7 +31,13 @@ p.post {
   border:1px;
   border-style:groove;
   padding:10px;
-  margin-left:10px;
+  text-align:left;
+}
+
+input {
+  font-size: 16px;
+  padding:10px;
+  text-align:left;
 }
 
 footer {
