--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
 {% block container %}
-<h2>Help Us Make New York's Bike Lanes Safer.</h2>
-<p>The City of New York is committed to making our streets safer for bikers as we work towards a greener future. 
-    If you see a car illegally parked in a bike lane, submit an anonymous tip today and you may be eligible for a $100 reward.
-
-</p>
+<h2 style="font-size: 40px; color: black;">Welcome Back, [insert_company_name_here].</h2>
+</br>
+<body>
+    <h2>Your Total Carbon Footprint:</h2>
+    <p>{{ total_footprint }} metric tons of GhG</p>
+</body>
 {% endblock %}
