--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -10,10 +10,11 @@ header {
   padding:20px;
 }
 
-header img {
-  width: 120px;
-  max-width: 30%;
-  height: auto 
+header h1 {
+  font-size: 60px;
+  padding:10px;
+  text-align:center;
+  color:forestgreen;
 }
 
 h2 {
@@ -42,6 +43,6 @@ form p {
 
 footer {
   margin-bottom: 5px;
-  background-color: #b9f0d3 ;
+  background-color: #b9f0d3;
   padding:20px;
 }
