--- a/templates/success.html
+++ b/templates/success.html
@@ -2,7 +2,6 @@
 
 {% block container %}
   <h2>Thank you for doing your part.</h2>
-  <p>If we are able to confirm your report, we will reach out at the email address 
-    you provided with information on how to collect your reward. </p>
-  <p><a href="{{ url_for('home') }}">Return to home page</a></p>
+  <p>Remember: Protecting the environment starts with you... and the 99 other global corporations that currently contribute to 71% of carbon emissions. </p>
+  <p><a href="{{ url_for('read') }}">View your entries here.</a></p>
 {% endblock %}
