--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,7 +7,7 @@
       <select id="fcat" name="fcat" onchange="toggleTextArea()">
         <option value="Transportation/Shipping">Transportation/Shipping</option>
         <option value="Data Storage">Data Storage</option>
-        <option value="Plastic Manufacturing">Plastic Manufacturing</option>
+        <option value="Plastic Manufacturing">Plastic Use</option>
         <option value="Agriculture">Agriculture</option>
       </select>
     </p>
